--- a/BetterDiscord/theme/akira.theme.css
+++ b/BetterDiscord/theme/akira.theme.css
@@ -6,8 +6,9 @@
 * @version 1.0
 * @authorLink https://discordapp.com/users/705306248538488947
 * @authorId 705306248538488947
+* @source https://dark-lynn.github.io/BetterDiscord/theme/akira.theme.css
 */
-@import url("https://nyri4.github.io/LilyPichu/main.css");
+@import url("https://dark-lynn.github.io/BetterDiscord/theme/source/akira.css");
 
 :root {
 
