--- a/BetterDiscord/theme/akira.theme.css
+++ b/BetterDiscord/theme/akira.theme.css
@@ -1,12 +1,14 @@
 /**
 * @name Akira
 * @author Dark-LYNN#6568
-* @description A theme based Nyria#3863's theme
-* @invite rtBQX5D3bD
-* @version 1.0
 * @authorLink https://discordapp.com/users/705306248538488947
 * @authorId 705306248538488947
+* @description A theme based Nyria#3863's theme
+* @version 1.1
 * @source https://dark-lynn.github.io/BetterDiscord/theme/akira.theme.css
+* @updateUrl https://dark-lynn.github.io/BetterDiscord/theme/akira.theme.css
+* @invite SBj5WzeVBj
+* @patreon https://www.patreon.com/Dark_Lynn
 */
 @import url("https://dark-lynn.github.io/BetterDiscord/theme/source/akira.css");
 
