--- a/BetterDiscord/theme/akira.theme.css
+++ b/BetterDiscord/theme/akira.theme.css
@@ -4,7 +4,7 @@
 * @authorLink https://discordapp.com/users/705306248538488947
 * @authorId 705306248538488947
 * @description A theme based Nyria#3863's theme
-* @version 1.1
+* @version 1.1.2
 * @source https://dark-lynn.github.io/BetterDiscord/theme/akira.theme.css
 * @updateUrl https://dark-lynn.github.io/BetterDiscord/theme/akira.theme.css
 * @invite SBj5WzeVBj
@@ -17,7 +17,7 @@
 /* --- User variables --- */
 
 /* Jumping GIF */
---jumping-gif: url('https://i.imgur.com/dCd49s0.gif');
+--jumping-gif: url('https://dark-lynn.github.io/BetterDiscord/theme/source/jumping.gif');
 
 /* Background (if you want an image replace it by : 
 
