--- a/BetterDiscord/theme/donators/donators.css
+++ b/BetterDiscord/theme/donators/donators.css
@@ -8,7 +8,7 @@
   background: url("https://cdn.discordapp.com/emojis/813060332704366642.png?v=1") center/100% no-repeat;
 }
 
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="193188089756123136"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="193188089756123136"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="596812194906374167"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="596812194906374167"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="281376608038813696"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="281376608038813696"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="269939624401436672"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="269939624401436672"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="272440514400354305"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="272440514400354305"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="409639495030538250"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="409639495030538250"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="303880582331629569"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="303880582331629569"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="562386647828791311"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="562386647828791311"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="442661470770167838"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="442661470770167838"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="148883925270396929"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="148883925270396929"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="394804652064899072"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="394804652064899072"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="233787027517210624"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="233787027517210624"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="751092600890458203"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="751092600890458203"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="289782983357890571"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="289782983357890571"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="478881945020006402"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="478881945020006402"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="118830296350064641"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="118830296350064641"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="421890156686213120"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="421890156686213120"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="285902386701271050"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="285902386701271050"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="429013973501870100"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="429013973501870100"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="317274395410169856"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="317274395410169856"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="705306248538488947"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="705306248538488947"]::before {
+.member-3-YXUe .wrapper-3t9DeA[data-user-id="193188089756123136"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="193188089756123136"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="596812194906374167"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="596812194906374167"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="281376608038813696"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="281376608038813696"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="269939624401436672"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="269939624401436672"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="272440514400354305"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="272440514400354305"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="409639495030538250"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="409639495030538250"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="303880582331629569"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="303880582331629569"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="562386647828791311"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="562386647828791311"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="442661470770167838"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="442661470770167838"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="148883925270396929"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="148883925270396929"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="394804652064899072"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="394804652064899072"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="233787027517210624"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="233787027517210624"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="751092600890458203"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="751092600890458203"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="289782983357890571"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="289782983357890571"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="478881945020006402"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="478881945020006402"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="118830296350064641"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="118830296350064641"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="421890156686213120"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="421890156686213120"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="285902386701271050"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="285902386701271050"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="429013973501870100"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="429013973501870100"]::before, .member-3-YXUe .wrapper-3t9DeA[data-user-id="317274395410169856"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="317274395410169856"]::before {
   content: "";
   position: absolute;
   width: 18px;
@@ -393,25 +393,6 @@
   background-image: linear-gradient(90deg, #fc00ff 0%, #00dbde 100%);
 }
 
-.message-2qnXI6[data-user-id="705306248538488947"]> :not(.repliedMessage-VokQwo) .username-1A8OIy,
-.message-2qnXI6[data-author-id="705306248538488947"]> :not(.repliedMessage-VokQwo) .username-1A8OIy,
-.message-2qnXI6[vz-user-id="705306248538488947"] .username-1A8OIy,
-.channel-2QD9_O[data-user-id="705306248538488947"] .overflow-WK9Ogt,
-.channel-2QD9_O[vz-user-id="705306248538488947"] .overflow-WK9Ogt,
-.member-3-YXUe[data-user-id="705306248538488947"] .roleColor-rz2vM0,
-.member-3-YXUe[vz-user-id="705306248538488947"] .roleColor-rz2vM0,
-.userPopout-xaxa6l[data-user-id="705306248538488947"] .username-2b1r56,
-.userPopout-xaxa6l[vz-user-id="705306248538488947"] .username-2b1r56,
-.root-3QyAh1[data-user-id="705306248538488947"] .username-2b1r56 {
-  color: transparent !important;
-  font-weight: bold;
-  background-size: 300%;
-  -webkit-animation: shine-reversed 5s linear infinite;
-  animation: shine-reversed 5s linear infinite;
-  -webkit-background-clip: text;
-  background-image: linear-gradient(90deg, #12c2e9 0%, #c471ed 50%, #f64f59 100%);
-}
-
 @-webkit-keyframes shine {
   to {
     background-position: 300% center;
@@ -434,4 +415,48 @@
   to {
     background-position: -300% center;
   }
+}
+
+.userPopout-xaxa6l[data-user-id="705306248538488947"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="705306248538488947"] .profileBadges-ohc0Vu::before {
+  content: "";
+  position: relative;
+  width: 20px;
+  height: 17px;
+  margin: 1.5px 6px 0 0;
+  pointer-events: none;
+  background: url("https://cdn.discordapp.com/emojis/829714664225112155.gif?size=96") center/100% no-repeat;
+}
+
+.member-3-YXUe .wrapper-3t9DeA[data-user-id="705306248538488947"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="705306248538488947"]::before {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 14px;
+  bottom: -3px;
+  left: -5px;
+  z-index: 2;
+  background: url("https://cdn.discordapp.com/emojis/829714664225112155.gif?size=96") no-repeat;
+  background-size: 85%;
+  border-radius: 0 5px 0 0;
+  pointer-events: none;
+}
+
+
+.message-2qnXI6[data-user-id="705306248538488947"]> :not(.repliedMessage-VokQwo) .username-1A8OIy,
+.message-2qnXI6[data-author-id="705306248538488947"]> :not(.repliedMessage-VokQwo) .username-1A8OIy,
+.message-2qnXI6[vz-user-id="705306248538488947"] .username-1A8OIy,
+.channel-2QD9_O[data-user-id="705306248538488947"] .overflow-WK9Ogt,
+.channel-2QD9_O[vz-user-id="705306248538488947"] .overflow-WK9Ogt,
+.member-3-YXUe[data-user-id="705306248538488947"] .roleColor-rz2vM0,
+.member-3-YXUe[vz-user-id="705306248538488947"] .roleColor-rz2vM0,
+.userPopout-xaxa6l[data-user-id="705306248538488947"] .username-2b1r56,
+.userPopout-xaxa6l[vz-user-id="705306248538488947"] .username-2b1r56,
+.root-3QyAh1[data-user-id="705306248538488947"] .username-2b1r56 {
+  color: transparent !important;
+  font-weight: bold;
+  background-size: 300%;
+  -webkit-animation: shine-reversed 5s linear infinite;
+  animation: shine-reversed 5s linear infinite;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(90deg, #12c2e9 0%, #c471ed 50%, #f64f59 100%);
 }
