--- a/BetterDiscord/theme/source/Lynnux.css
+++ b/BetterDiscord/theme/source/Lynnux.css
@@ -41,24 +41,5 @@
   -webkit-animation: shine-reversed 5s linear infinite;
   animation: shine-reversed 5s linear infinite;
   -webkit-background-clip: text;
-  background-image: linear-gradient(90deg, #12c2e9 0%, #c471ed 20%, #f64f59 40% #c471ed 60% #12c2e9 80% #c471ed 100%);
+  background-image: linear-gradient(90deg, #12c2e9 0%, #c471ed 50%, #f64f59 100%);
 }
-
-  .container-2lgZY8::after {
-    content: "Stay comfy ❤";
-    position: fixed;
-    top: 220px;
-    bottom: 85px;
-    right: 60px;
-    z-index: -2;
-    width: 320px;
-    background-color: var(--background-primary);
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-    color: var(--text-normal);
-    border-radius: var(--border-radius);
-    overflow: hidden;
-  }
