--- a/BetterDiscord/extension/Discord-Colored/main.css
+++ b/BetterDiscord/extension/Discord-Colored/main.css
@@ -1,7 +1,7 @@
 /* 🛩️ Airplane */
 [style*='background-image: url("/assets/88d6e5a673e816bf927dc8fe11d42d29.svg");'],
 [style*='background-image: url("/assets/9937df80bc9c58a3e67709f58402f4db.svg");'] { 
-    background-image: url('https://nyri4.github.io/Discolored/assets/airplane.svg') !important; 
+    background-image: url('https://dark-lynn.github.io/BetterDiscord/extension/Discord-Colored/assets/airplane.svg') !important; 
 }
 
 /* 🕹️ Arcades */
