--- a/BetterDiscord/theme/donators/donators.css
+++ b/BetterDiscord/theme/donators/donators.css
@@ -62,3 +62,11 @@
     background-position: -300% center;
   }
 }
+@keyframes gradient-border {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 100% 0;
+  }
+  }
