--- a/BetterDiscord/theme/donators/donators.css
+++ b/BetterDiscord/theme/donators/donators.css
@@ -38,7 +38,7 @@
   -webkit-animation: shine-reversed 5s linear infinite;
           animation: shine-reversed 5s linear infinite;
   -webkit-background-clip: text;
-  background-image: linear-gradient(90deg, #12c2e9 0%, #c471ed 50%, #f64f59 100%);
+  background-image: linear-gradient(90deg, #12c2e9 0%, #c471ed 60%, #f64f59 70%, #f64f59 80% ,#c471ed 90%, #12c2e9 100%);
 }
 
 @-webkit-keyframes shine {
@@ -69,4 +69,4 @@
   to {
     background-position: 100% 0;
   }
-  }
+}
