--- a/BetterDiscord/theme/Lynnux/Lynnux.css
+++ b/BetterDiscord/theme/Lynnux/Lynnux.css
@@ -1,40 +1,40 @@
-#app-mount .nameAndDecorators-5FJ2dg .name-uJV0GL .overflow-WK9Ogt::before,
-#app-mount .nameAndDecorators-5FJ2dg .name-uJV0GL span::before,
-#app-mount .listAvatar-1BbvHX + .listName-U3shDM .username-2b1r56::before {
+#app-mount .nameAndDecorators-3ERwy2 .name-3Vmqxm .overflow-1wOqNV::before,
+#app-mount .nameAndDecorators-3ERwy2 .name-3Vmqxm span::before,
+#app-mount .listAvatar-2bU5Uh + .listName-PwbeHL .username-3JLfHz::before {
     padding: 0 8px 0 8px;
     margin-right: 4px;
 }
-#app-mount .wrapper-2a6GCs h2 .username-1A8OIy::before,
-#app-mount .userInfo-2zN2z8 .wrapper-3t9DeA + .text-37NqbO .username-2b1r56::before,
-#app-mount .userPopout-xaxa6l .headerTagUsernameNoNickname-1ZLDYY::before,
-#app-mount .userPopout-xaxa6l .nickname-2gQ76l::before {
+#app-mount .wrapper-30-Nkg h2 .username-h_Y3Us::before,
+#app-mount .userInfo-2WpsYG .wrapper-1VLyxH + .text-3j8t_e .username-3JLfHz::before,
+#app-mount .userPopout-2j1gM4 .headerTagUsernameNoNickname-1ZLDYY::before,
+#app-mount .userPopout-2j1gM4 .nickname-2gQ76l::before {
     padding: 0 10px 0 10px;
     margin-right: 4px;
 }
-#app-mount .wrapper-3t9DeA + .header-3uLluP::before {
+#app-mount .wrapper-1VLyxH + .header-1dhDWV::before {
     padding: 0 12px 0 12px;
     margin-right: 4px;
 }
 
-[data-user-id="705306248538488947"] .username-1A8OIy::before,
-[data-user-id="705306248538488947"] .nameAndDecorators-5FJ2dg .name-uJV0GL span::before,
-[data-user-id="705306248538488947"] .nameAndDecorators-5FJ2dg .name-uJV0GL .overflow-WK9Ogt::before, 
-[data-user-id="705306248538488947"].userPopout-xaxa6l .headerTagUsernameNoNickname-1ZLDYY::before, 
-[data-user-id="705306248538488947"].userPopout-xaxa6l .nickname-2gQ76l::before {
+[data-user-id="705306248538488947"] .username-h_Y3Us::before,
+[data-user-id="705306248538488947"] .nameAndDecorators-3ERwy2 .name-3Vmqxm span::before,
+[data-user-id="705306248538488947"] .nameAndDecorators-3ERwy2 .name-3Vmqxm .overflow-1wOqNV::before, 
+[data-user-id="705306248538488947"].userPopout-2j1gM4 .headerTagUsernameNoNickname-1ZLDYY::before, 
+[data-user-id="705306248538488947"].userPopout-2j1gM4 .nickname-2gQ76l::before {
     content: "";
     background: url("https://cdn.discordapp.com/emojis/758814419701465128.gif?size=96&quality=lossless") center/100% no-repeat;
 }
 
-.message-2qnXI6[data-user-id="705306248538488947"]> :not(.repliedMessage-VokQwo) .username-1A8OIy,
-.message-2qnXI6[data-author-id="705306248538488947"]> :not(.repliedMessage-VokQwo) .username-1A8OIy,
-.message-2qnXI6[vz-user-id="705306248538488947"] .username-1A8OIy,
-.channel-2QD9_O[data-user-id="705306248538488947"] .overflow-WK9Ogt,
-.channel-2QD9_O[vz-user-id="705306248538488947"] .overflow-WK9Ogt,
-.member-3-YXUe[data-user-id="705306248538488947"] .roleColor-rz2vM0,
-.member-3-YXUe[vz-user-id="705306248538488947"] .roleColor-rz2vM0,
-.userPopout-xaxa6l[data-user-id="705306248538488947"] .username-2b1r56,
-.userPopout-xaxa6l[vz-user-id="705306248538488947"] .username-2b1r56,
-.root-3QyAh1[data-user-id="705306248538488947"] .username-2b1r56 {
+.message-2CShn3[data-user-id="705306248538488947"]> :not(.repliedMessage-3Z6XBG) .username-h_Y3Us,
+.message-2CShn3[data-author-id="705306248538488947"]> :not(.repliedMessage-3Z6XBG) .username-h_Y3Us,
+.message-2CShn3[vz-user-id="705306248538488947"] .username-h_Y3Us,
+.channel-1Shao0[data-user-id="705306248538488947"] .overflow-1wOqNV,
+.channel-1Shao0[vz-user-id="705306248538488947"] .overflow-1wOqNV,
+.member-2gU6Ar[data-user-id="705306248538488947"] .roleColor-nA7BqX,
+.member-2gU6Ar[vz-user-id="705306248538488947"] .roleColor-nA7BqX,
+.userPopout-2j1gM4[data-user-id="705306248538488947"] .username-3JLfHz,
+.userPopout-2j1gM4[vz-user-id="705306248538488947"] .username-3JLfHz,
+.root-8LYsGj[data-user-id="705306248538488947"] .username-3JLfHz {
   color: transparent !important;
   font-weight: bold;
   background-size: 300%;
@@ -72,92 +72,92 @@
     --indicator-connected-hover:rgba(var(--indicator-connected),0.18);
     --indicator-connected-background:rgba(var(--indicator-connected),0.1)
 }
-#app-mount .layout-2DM8Md,#app-mount .wrapper-2jXpOf .content-1x5b-n{
+#app-mount .layout-1qmrhw,#app-mount .wrapper-NhbLHG .content-1gYQeQ{
     background-color:transparent
 }
-#app-mount .categoryItem-ONe8JV,#app-mount .channel-2QD9_O,#app-mount .wrapper-2jXpOf{
+#app-mount .categoryItem-Kc_HK_,#app-mount .channel-1Shao0,#app-mount .wrapper-NhbLHG{
     border-radius:var(--indicator-rounding-info)
 }
-#app-mount .categoryItem-ONe8JV:before,#app-mount .channel-2QD9_O:before,#app-mount .wrapper-2jXpOf:before{
+#app-mount .categoryItem-Kc_HK_:before,#app-mount .channel-1Shao0:before,#app-mount .wrapper-NhbLHG:before{
     content:"";
     border-left:var(--indicator-border-info) transparent
-}#app-mount .channel-2QD9_O:before,#app-mount .containerDefault--pIXnN .wrapper-2jXpOf:before{
+}#app-mount .channel-1Shao0:before,#app-mount .containerDefault-YUSmu3 .wrapper-NhbLHG:before{
     position:absolute;
     top:0;
     left:0;
     bottom:0
 }
-#app-mount .categoryItem-ONe8JV:before{
+#app-mount .categoryItem-Kc_HK_:before{
     position:fixed;
     margin-top:-1px;
     height:44px
 }
-#app-mount .container-2Pjhx-.clickable-1JJAn8:hover,#app-mount .modeMuted-onO3r-:hover,#app-mount .modeUnread-1qO3K1:hover,#app-mount [class="iconVisibility-sTNpHs wrapper-2jXpOf"]:hover{
+#app-mount .container-1oeRFJ.clickable-28SzVr:hover,#app-mount .modeMuted-2T4MDZ:hover,#app-mount .modeUnread-3Cxepe:hover,#app-mount [class="iconVisibility-vptxma wrapper-NhbLHG"]:hover{
     background:var(--indicator-hovered)
 }
-#app-mount .container-2Pjhx-.clickable-1JJAn8:hover div>svg,#app-mount .modeMuted-onO3r-:hover div>svg,#app-mount .modeUnread-1qO3K1:hover div>svg,#app-mount [class="iconVisibility-sTNpHs wrapper-2jXpOf"]:hover div>svg{
+#app-mount .container-1oeRFJ.clickable-28SzVr:hover div>svg,#app-mount .modeMuted-2T4MDZ:hover div>svg,#app-mount .modeUnread-3Cxepe:hover div>svg,#app-mount [class="iconVisibility-vptxma wrapper-NhbLHG"]:hover div>svg{
     color:var(--interactive-hover)
 }
-#app-mount .channel-2QD9_O.selected-aXhQR6,#app-mount .modeSelected-346R90,#app-mount .selectedCategoryItem-28UllF{
+#app-mount .channel-1Shao0.selected-1-Z6gm,#app-mount .modeSelected-3DmyhH,#app-mount .selectedCategoryItem-ZjqSui{
     background-color:var(--indicator-selected-background)
 }
-#app-mount .channel-2QD9_O.selected-aXhQR6:hover,#app-mount .modeSelected-346R90:hover,#app-mount .selectedCategoryItem-28UllF:hover{
+#app-mount .channel-1Shao0.selected-1-Z6gm:hover,#app-mount .modeSelected-3DmyhH:hover,#app-mount .selectedCategoryItem-ZjqSui:hover{
     background-color:var(--indicator-selected-hover)
 }
-#app-mount .channel-2QD9_O.selected-aXhQR6:before,#app-mount .modeSelected-346R90:before,#app-mount .selectedCategoryItem-28UllF:before{
+#app-mount .channel-1Shao0.selected-1-Z6gm:before,#app-mount .modeSelected-3DmyhH:before,#app-mount .selectedCategoryItem-ZjqSui:before{
     border-left:var(--indicator-border-info) var(--indicator-selected-border)
 }
-#app-mount .channel-2QD9_O.selected-aXhQR6 .overflow-WK9Ogt,#app-mount .modeSelected-346R90 .overflow-WK9Ogt,#app-mount .selectedCategoryItem-28UllF .overflow-WK9Ogt{
+#app-mount .channel-1Shao0.selected-1-Z6gm .overflow-1wOqNV,#app-mount .modeSelected-3DmyhH .overflow-1wOqNV,#app-mount .selectedCategoryItem-ZjqSui .overflow-1wOqNV{
     color:var(--indicator-active)
 }
-#app-mount .channel-2QD9_O.selected-aXhQR6 div>svg,#app-mount .modeSelected-346R90 div>svg,#app-mount .selectedCategoryItem-28UllF div>svg{color:var(--indicator-selected-icons)}
-#app-mount .selectedCategoryItem-28UllF .wrappedName-26qVtL{
+#app-mount .channel-1Shao0.selected-1-Z6gm div>svg,#app-mount .modeSelected-3DmyhH div>svg,#app-mount .selectedCategoryItem-ZjqSui div>svg{color:var(--indicator-selected-icons)}
+#app-mount .selectedCategoryItem-ZjqSui .wrappedName-1GzMwB{
     color:var(--indicator-active)
 }
-#app-mount .modeUnread-1qO3K1{
+#app-mount .modeUnread-3Cxepe{
     background-color:var(--indicator-unread-background)
 }
-#app-mount .modeUnread-1qO3K1:before{
+#app-mount .modeUnread-3Cxepe:before{
     border-left-color:var(--indicator-unread-border)
 }
-#app-mount .modeUnread-1qO3K1 .overflow-WK9Ogt{
+#app-mount .modeUnread-3Cxepe .overflow-1wOqNV{
     color:var(--indicator-active)
 }
-#app-mount .modeUnread-1qO3K1 .actionIcon-PgcMM2,#app-mount .modeUnread-1qO3K1 .icon-1DeIlz{
+#app-mount .modeUnread-3Cxepe .actionIcon-2sw4Sl,#app-mount .modeUnread-3Cxepe .icon-2W8DHg{
     color:var(--indicator-unread-icons)
 }
-#app-mount .modeUnread-1qO3K1 .unread-2lAfLh{
+#app-mount .modeUnread-3Cxepe .unread-36eUEm{
     display:none
 }
-#app-mount .modeConnected-3IsKId{
+#app-mount .modeConnected-NrO4cP{
     background-color:var(--indicator-connected-background)
 }
-#app-mount .modeConnected-3IsKId:hover{
+#app-mount .modeConnected-NrO4cP:hover{
     background-color:var(--indicator-connected-hover)
 }
-#app-mount .modeConnected-3IsKId:before{
+#app-mount .modeConnected-NrO4cP:before{
     border-left-color:var(--indicator-connected-border)
-}#app-mount .modeConnected-3IsKId .overflow-WK9Ogt{
+}#app-mount .modeConnected-NrO4cP .overflow-1wOqNV{
     color:var(--indicator-active)
 }
-#app-mount .modeConnected-3IsKId .userLimit-3aerPX .wrapper-2tAnRe{
+#app-mount .modeConnected-NrO4cP .userLimit-VbEkeM .wrapper-2fEmwW{
     color:var(--indicator-active);background-color:rgba(var(--indicator-connected),0.4)
 }
-#app-mount .modeConnected-3IsKId .userLimit-3aerPX .wrapper-2tAnRe .users-3kndPl{
+#app-mount .modeConnected-NrO4cP .userLimit-VbEkeM .wrapper-2fEmwW .users-2JoyGL{
     background-color:transparent
 }
-#app-mount .modeConnected-3IsKId .userLimit-3aerPX .wrapper-2tAnRe .total-i6us2n{
+#app-mount .modeConnected-NrO4cP .userLimit-VbEkeM .wrapper-2fEmwW .total-1c5KCN{
     background-color:rgba(var(--indicator-connected),0.4)
 }
-#app-mount .modeConnected-3IsKId .userLimit-3aerPX .wrapper-2tAnRe .total-i6us2n:after{
+#app-mount .modeConnected-NrO4cP .userLimit-VbEkeM .wrapper-2fEmwW .total-1c5KCN:after{
     border-right-color:rgba(var(--indicator-connected),0.4)
 }
-#app-mount .modeConnected-3IsKId .actionIcon-PgcMM2,#app-mount .modeConnected-3IsKId .icon-1DeIlz{
+#app-mount .modeConnected-NrO4cP .actionIcon-2sw4Sl,#app-mount .modeConnected-NrO4cP .icon-2W8DHg{
     color:var(--indicator-connected-icons,rgba(var(--indicator-connected)))
 }
-#app-mount .categoryItem-ONe8JV,#app-mount .channel-2QD9_O{
+#app-mount .categoryItem-Kc_HK_,#app-mount .channel-1Shao0{
     margin-left:0;max-width:100%
 }
-#app-mount .categoryItem-ONe8JV .avatar-3uk_u9,#app-mount .channel-2QD9_O .avatar-3uk_u9{
+#app-mount .categoryItem-Kc_HK_ .avatar-6qzftW,#app-mount .channel-1Shao0 .avatar-6qzftW{
     margin-left:8px
 }
