--- a/BetterDiscord/theme/Lynnux/Lynnux.css
+++ b/BetterDiscord/theme/Lynnux/Lynnux.css
@@ -1,163 +1,1 @@
-#app-mount .nameAndDecorators-3ERwy2 .name-3Vmqxm .overflow-1wOqNV::before,
-#app-mount .nameAndDecorators-3ERwy2 .name-3Vmqxm span::before,
-#app-mount .listAvatar-2bU5Uh + .listName-PwbeHL .username-3JLfHz::before {
-    padding: 0 8px 0 8px;
-    margin-right: 4px;
-}
-#app-mount .wrapper-30-Nkg h2 .username-h_Y3Us::before,
-#app-mount .userInfo-2WpsYG .wrapper-1VLyxH + .text-3j8t_e .username-3JLfHz::before,
-#app-mount .userPopout-2j1gM4 .headerTagUsernameNoNickname-1ZLDYY::before,
-#app-mount .userPopout-2j1gM4 .nickname-2gQ76l::before {
-    padding: 0 10px 0 10px;
-    margin-right: 4px;
-}
-#app-mount .wrapper-1VLyxH + .header-1dhDWV::before {
-    padding: 0 12px 0 12px;
-    margin-right: 4px;
-}
-
-[data-user-id="705306248538488947"] .username-h_Y3Us::before,
-[data-user-id="705306248538488947"] .nameAndDecorators-3ERwy2 .name-3Vmqxm span::before,
-[data-user-id="705306248538488947"] .nameAndDecorators-3ERwy2 .name-3Vmqxm .overflow-1wOqNV::before, 
-[data-user-id="705306248538488947"].userPopout-2j1gM4 .headerTagUsernameNoNickname-1ZLDYY::before, 
-[data-user-id="705306248538488947"].userPopout-2j1gM4 .nickname-2gQ76l::before {
-    content: "";
-    background: url("https://cdn.discordapp.com/emojis/758814419701465128.gif?size=96&quality=lossless") center/100% no-repeat;
-}
-
-.message-2CShn3[data-user-id="705306248538488947"]> :not(.repliedMessage-3Z6XBG) .username-h_Y3Us,
-.message-2CShn3[data-author-id="705306248538488947"]> :not(.repliedMessage-3Z6XBG) .username-h_Y3Us,
-.message-2CShn3[vz-user-id="705306248538488947"] .username-h_Y3Us,
-.channel-1Shao0[data-user-id="705306248538488947"] .overflow-1wOqNV,
-.channel-1Shao0[vz-user-id="705306248538488947"] .overflow-1wOqNV,
-.member-2gU6Ar[data-user-id="705306248538488947"] .roleColor-nA7BqX,
-.member-2gU6Ar[vz-user-id="705306248538488947"] .roleColor-nA7BqX,
-.userPopout-2j1gM4[data-user-id="705306248538488947"] .username-3JLfHz,
-.userPopout-2j1gM4[vz-user-id="705306248538488947"] .username-3JLfHz,
-.root-8LYsGj[data-user-id="705306248538488947"] .username-3JLfHz {
-  color: transparent !important;
-  font-weight: bold;
-  background-size: 300%;
-  -webkit-animation: shine-reversed 5s linear infinite;
-  animation: shine-reversed 5s linear infinite;
-  -webkit-background-clip: text;
-  background-image: linear-gradient(90deg, #12c2e9 0%, #c471ed 50%, #f64f59 100%);
-}
-
-.theme-dark{
-    --indicator-selected:88,101,242;
-    --indicator-unread:255,255,255;
-    --indicator-connected:87,242,135;
-    --indicator-active:white
-}
-.theme-light{
-    --indicator-selected:88,101,242;
-    --indicator-unread:0,0,0;
-    --indicator-connected:65,183,102;
-    --indicator-active:black
-}
-:root{
-    --indicator-border-info:solid 2px;
-    --indicator-rounding-info:0 0px 0px 0;
-    --indicator-hovered:rgba(85,90,100,0.25);
-    --indicator-selected-border:rgba(var(--indicator-selected));
-    --indicator-selected-icons:rgba(var(--indicator-selected));
-    --indicator-selected-hover:rgba(var(--indicator-selected),0.18);
-    --indicator-selected-background:rgba(var(--indicator-selected),0.1);
-    --indicator-unread-border:rgba(var(--indicator-unread),0.6);
-    --indicator-unread-icons:var(--indicator-unread-border);
-    --indicator-unread-background:rgba(var(--indicator-unread),0.020);
-    --indicator-connected-border:rgba(var(--indicator-connected));
-    --indicator-connected-icons:var(--indicator-connected-border);
-    --indicator-connected-hover:rgba(var(--indicator-connected),0.18);
-    --indicator-connected-background:rgba(var(--indicator-connected),0.1)
-}
-#app-mount .layout-1qmrhw,#app-mount .wrapper-NhbLHG .content-1gYQeQ{
-    background-color:transparent
-}
-#app-mount .categoryItem-Kc_HK_,#app-mount .channel-1Shao0,#app-mount .wrapper-NhbLHG{
-    border-radius:var(--indicator-rounding-info)
-}
-#app-mount .categoryItem-Kc_HK_:before,#app-mount .channel-1Shao0:before,#app-mount .wrapper-NhbLHG:before{
-    content:"";
-    border-left:var(--indicator-border-info) transparent
-}#app-mount .channel-1Shao0:before,#app-mount .containerDefault-YUSmu3 .wrapper-NhbLHG:before{
-    position:absolute;
-    top:0;
-    left:0;
-    bottom:0
-}
-#app-mount .categoryItem-Kc_HK_:before{
-    position:fixed;
-    margin-top:-1px;
-    height:44px
-}
-#app-mount .container-1oeRFJ.clickable-28SzVr:hover,#app-mount .modeMuted-2T4MDZ:hover,#app-mount .modeUnread-3Cxepe:hover,#app-mount [class="iconVisibility-vptxma wrapper-NhbLHG"]:hover{
-    background:var(--indicator-hovered)
-}
-#app-mount .container-1oeRFJ.clickable-28SzVr:hover div>svg,#app-mount .modeMuted-2T4MDZ:hover div>svg,#app-mount .modeUnread-3Cxepe:hover div>svg,#app-mount [class="iconVisibility-vptxma wrapper-NhbLHG"]:hover div>svg{
-    color:var(--interactive-hover)
-}
-#app-mount .channel-1Shao0.selected-1-Z6gm,#app-mount .modeSelected-3DmyhH,#app-mount .selectedCategoryItem-ZjqSui{
-    background-color:var(--indicator-selected-background)
-}
-#app-mount .channel-1Shao0.selected-1-Z6gm:hover,#app-mount .modeSelected-3DmyhH:hover,#app-mount .selectedCategoryItem-ZjqSui:hover{
-    background-color:var(--indicator-selected-hover)
-}
-#app-mount .channel-1Shao0.selected-1-Z6gm:before,#app-mount .modeSelected-3DmyhH:before,#app-mount .selectedCategoryItem-ZjqSui:before{
-    border-left:var(--indicator-border-info) var(--indicator-selected-border)
-}
-#app-mount .channel-1Shao0.selected-1-Z6gm .overflow-1wOqNV,#app-mount .modeSelected-3DmyhH .overflow-1wOqNV,#app-mount .selectedCategoryItem-ZjqSui .overflow-1wOqNV{
-    color:var(--indicator-active)
-}
-#app-mount .channel-1Shao0.selected-1-Z6gm div>svg,#app-mount .modeSelected-3DmyhH div>svg,#app-mount .selectedCategoryItem-ZjqSui div>svg{color:var(--indicator-selected-icons)}
-#app-mount .selectedCategoryItem-ZjqSui .wrappedName-1GzMwB{
-    color:var(--indicator-active)
-}
-#app-mount .modeUnread-3Cxepe{
-    background-color:var(--indicator-unread-background)
-}
-#app-mount .modeUnread-3Cxepe:before{
-    border-left-color:var(--indicator-unread-border)
-}
-#app-mount .modeUnread-3Cxepe .overflow-1wOqNV{
-    color:var(--indicator-active)
-}
-#app-mount .modeUnread-3Cxepe .actionIcon-2sw4Sl,#app-mount .modeUnread-3Cxepe .icon-2W8DHg{
-    color:var(--indicator-unread-icons)
-}
-#app-mount .modeUnread-3Cxepe .unread-36eUEm{
-    display:none
-}
-#app-mount .modeConnected-NrO4cP{
-    background-color:var(--indicator-connected-background)
-}
-#app-mount .modeConnected-NrO4cP:hover{
-    background-color:var(--indicator-connected-hover)
-}
-#app-mount .modeConnected-NrO4cP:before{
-    border-left-color:var(--indicator-connected-border)
-}#app-mount .modeConnected-NrO4cP .overflow-1wOqNV{
-    color:var(--indicator-active)
-}
-#app-mount .modeConnected-NrO4cP .userLimit-VbEkeM .wrapper-2fEmwW{
-    color:var(--indicator-active);background-color:rgba(var(--indicator-connected),0.4)
-}
-#app-mount .modeConnected-NrO4cP .userLimit-VbEkeM .wrapper-2fEmwW .users-2JoyGL{
-    background-color:transparent
-}
-#app-mount .modeConnected-NrO4cP .userLimit-VbEkeM .wrapper-2fEmwW .total-1c5KCN{
-    background-color:rgba(var(--indicator-connected),0.4)
-}
-#app-mount .modeConnected-NrO4cP .userLimit-VbEkeM .wrapper-2fEmwW .total-1c5KCN:after{
-    border-right-color:rgba(var(--indicator-connected),0.4)
-}
-#app-mount .modeConnected-NrO4cP .actionIcon-2sw4Sl,#app-mount .modeConnected-NrO4cP .icon-2W8DHg{
-    color:var(--indicator-connected-icons,rgba(var(--indicator-connected)))
-}
-#app-mount .categoryItem-Kc_HK_,#app-mount .channel-1Shao0{
-    margin-left:0;max-width:100%
-}
-#app-mount .categoryItem-Kc_HK_ .avatar-6qzftW,#app-mount .channel-1Shao0 .avatar-6qzftW{
-    margin-left:8px
-}
+.premiumIconWrapper-32h0Ri {display:none}
