--- a/BetterDiscord/theme/Lynnux/Lynnux.theme.css
+++ b/BetterDiscord/theme/Lynnux/Lynnux.theme.css
@@ -14,6 +14,7 @@
 @import url('https://dark-lynn.github.io/BetterDiscord/theme/donators/donators.css');
 @import url("https://dark-lynn.github.io/BetterDiscord/theme/Lynnux/CircleStatus.css");
 @import url('https://dark-lynn.github.io/BetterDiscord/theme/lynnux/lynnux.css');
+@import url('https://dark-lynn.github.io/BetterDiscord/theme/event/christmas.css');
 
 :root {
   --rs-small-spacing: 2px; /* Gap between avatar and status for members list/dms | MUST end in px */
