--- a/BetterDiscord/theme/Lynnux/Lynnux.css
+++ b/BetterDiscord/theme/Lynnux/Lynnux.css
@@ -26,7 +26,7 @@
 
 @charset "UTF-8";
 @import url("https://dark-lynn.github.io/BetterDiscord/theme/Lynnux/CircleStatus.css");
-@import url('https://dark-lynn.github.io/BetterDiscord/theme/event/christmas.css');
+/*@import url('https://dark-lynn.github.io/BetterDiscord/theme/event/christmas.css');*/
 @import url('https://dark-lynn.github.io/BetterDiscord/theme/donators/donators.css');
 @import url("https://fonts.googleapis.com/css2?family=Nunito");
 @import url("https://discord-custom-covers.github.io/usrbg/dist/usrbg.css");
