--- a/BetterDiscord/extension/BetterSettings.css
+++ b/BetterDiscord/extension/BetterSettings.css
@@ -1,5 +1,16 @@
 /*
-
+* @name BetterSettings
+* @author Dark-LYNN#6568
+* @authorLink https://discordapp.com/users/705306248538488947
+* @authorId 705306248538488947
+* @description UwU
+* @version 1.0
+* @source https://dark-lynn.github.io/BetterDiscord/extension/BetterSettings.css
+* @updateUrl https://dark-lynn.github.io/BetterDiscord/extension/BetterSettings.css
+* @invite SBj5WzeVBj
+* @patreon https://www.patreon.com/Dark_Lynn
+*/
+/*
 ⣿⡟⠙⠛⠋⠩⠭⣉⡛⢛⠫⠭⠄⠒⠄⠄⠄⠈⠉⠛⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 ⣿⡇⠄⠄⠄⠄⣠⠖⠋⣀⡤⠄⠒⠄⠄⠄⠄⠄⠄⠄⠄⠄⣈⡭⠭⠄⠄⠄⠉⠙
 ⣿⡇⠄⠄⢀⣞⣡⠴⠚⠁⠄⠄⢀⠠⠄⠄⠄⠄⠄⠄⠄⠉⠄⠄⠄⠄⠄⠄⠄⠄
