--- a/BetterDiscord/theme/event/funPeople.css
+++ b/BetterDiscord/theme/event/funPeople.css
@@ -16,5 +16,5 @@
     -webkit-animation: shine-reversed 5s linear infinite;
             animation: shine-reversed 5s linear infinite;
     -webkit-background-clip: text;
-    background-image: linear-gradient(to top left, #1388cc, #ff0000);
+    background-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet, red);
   }
