--- a/BetterDiscord/theme/event/funPeople.css
+++ b/BetterDiscord/theme/event/funPeople.css
@@ -16,7 +16,7 @@
     -webkit-animation: shine-reversed 5s linear infinite;
             animation: shine-reversed 5s linear infinite;
     -webkit-background-clip: text;
-    background-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet, red);
+    background-image: linear-gradient(45deg,orange, yellow, green, blue, indigo, violet, red);
   }
 
   .message-2CShn3[data-user-id="551786741296791562"] > :not(.repliedMessage-3Z6XBG) .username-h_Y3Us,
