--- a/Game/style.css
+++ b/Game/style.css
@@ -36,7 +36,7 @@ table {
 }
 
 th {
-    background-color: #FE4902;
+    background-color: #fe02bb;
     color: #FFF;
     cursor: pointer;
     padding: 5px 10px;
